GNOME Bugzilla – Bug 726428
String "Unknown" is missing a msgctxt
Last modified: 2014-04-08 03:52:38 UTC
"Unknown" appears with several translator comments. The same string is used in different contexts and could have a different translation each time, depending on the case.
Created attachment 272042 [details] [review] Add translation context in a number of places We use "Unknown" in several contexts, and several other strings could do with disambiguating as well.
Review of attachment 272042 [details] [review]: Looks good to me, please rebase and then push to master -- thanks!
Attachment 272042 [details] pushed as 8c11480 - Add translation context in a number of places