Add translation context in a number of places

We use "Unknown" in several contexts, and several other strings
could do with disambiguating as well.
https://bugzilla.gnome.org/show_bug.cgi?id=726428